<resources>
    <string name="app_name">コクマ保育</string>
    <string name="戻る">"戻る"</string>
    <string name="送信">"送信"</string>
    <string name="確認">"確認"</string>
    <string name="決定">"決定"</string>

    <string name="main_text1">"ログインID"</string>
    <string name="main_text2">"パスワード"</string>

    <string name="k1_1_text1">"一時保育はこちら"</string>
    <string name="k1_1_text2">"一時保育"</string>
    <string name="k1_1_text3">"送迎保育はこちら"</string>
    <string name="k1_1_text4">"送迎保育"</string>


    <string name="k2_2_text1">"お送り予定時間"</string>
    <string name="k2_2_text2">"お迎え予定時間"</string>
    <string name="k2_3_text1">"以下の日程でよろしいですか？"</string>

    <string name="k3_1_text1">""</string>


    <string name="k6_1_text1">"パスワードを忘れてしまった時のために登録した秘密の質問を答えてください。 "</string>
    <string name="k6_1_text2">"あなたが幼少期に付けられたあだ名は？"</string>
    <string name="k6_2_text1">"本人確認ができました。新しいパスワードを入力してください"</string>
    <string name="k6_2_text2">"新しいパスワードを入力"</string>
    <string name="k6_2_text3">"パスワードを再入力してください"</string>
    <string name="k6_3_text1">"パスワード再設定が完了しました"</string>


    <string-array name="list">
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
    </string-array>

    <string-array name="list2">
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
