<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="181dp"
        android:layout_height="29dp"
        android:entries="@array/list"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="185dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/戻る"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="380dp" />

    <Button
        android:id="@+id/button_kakunin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/確認"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="380dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="185dp"
        android:layout_height="29dp"
        android:entries="@array/list2"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/k2_2textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k2_2_text1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k2_2_text2"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="241dp" />
</android.support.constraint.ConstraintLayout>